--- a/LearningProcess/Book/Python_WEB/WEB_Basic/Html_CSS/EX_Html.html
+++ b/LearningProcess/Book/Python_WEB/WEB_Basic/Html_CSS/EX_Html.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
     <script src="https://cdn.staticfile.org/jquery/3.5.1/jquery.js"></script>
 </head>
 <body>
@@ -25,7 +26,11 @@
     </div>
     <div>
         <button id="btn">提交</button>
-        <input type="submit" name="Submit" value="提交提交">
+<!--        <input type="submit" name="Submit" value="提交提交">-->
+    </div>
+    <div>
+        <a>https://getbootstrap.com/</a>
+        <p><link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous"></p>
     </div>
     <div>
         <a id="URL_test" href="https://cdn.staticfile.org">明日</a>
